<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity"
    android:padding="3dp">


    <!-- Name -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="horizontal"
    android:paddingRight="10dp"
    android:weightSum="4"
    android:paddingEnd="10dp">

<EditText
    android:id="@+id/nameEditTxt"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="3"
    android:gravity="center_horizontal"/>

<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:padding="2dp"
    android:paddingRight="10dp"
    android:text="@string/name"
    android:textSize="18sp"
    android:textStyle="bold"
    android:paddingEnd="10dp" />

</LinearLayout>

    <!-- Email -->
    <LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="4dp"
android:orientation="horizontal"
android:paddingRight="10dp"
android:weightSum="4"
 android:paddingEnd="10dp">

<EditText
    android:id="@+id/emailEditTxt"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="3"
    android:gravity="center_horizontal"/>

<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:padding="2dp"
    android:paddingRight="10dp"
    android:text="@string/prompt_email"
    android:textSize="18sp"
    android:textStyle="bold"
    android:paddingEnd="10dp" />

</LinearLayout>

    <!-- Password  New Or Exist -->
    <LinearLayout
        android:id="@+id/existPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:weightSum="4"
        android:paddingEnd="10dp">

        <EditText
            android:id="@+id/passwordEditTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="textPassword"
            android:gravity="center_horizontal"
            android:hint="@string/hint_password"
           />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:paddingRight="10dp"
            android:text="@string/prompt_password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingEnd="10dp" />

    </LinearLayout>

    <!-- Password Confirmation Or New -->
    <LinearLayout
        android:id="@+id/newPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:weightSum="4"
        android:paddingEnd="10dp">

        <EditText
            android:id="@+id/passwordConfirmEditTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="textPassword"
            android:gravity="center_horizontal"
            android:hint="@string/password_authentication"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:paddingRight="10dp"
            android:text="@string/prompt_password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingEnd="10dp" />

    </LinearLayout>

    <!-- Phone Number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:weightSum="4"
        android:paddingEnd="10dp">

        <EditText
            android:id="@+id/phoneEditTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:paddingRight="10dp"
            android:text="@string/phone"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingEnd="10dp" />

    </LinearLayout>

    <!-- Phone Number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:weightSum="6"
        android:paddingEnd="10dp">

        <EditText
            android:id="@+id/phone2EditTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="2dp"
            android:paddingRight="10dp"
            android:text="@string/extra_phone"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingEnd="10dp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/passwordChangeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_changing"
        android:button="@null"
        android:visibility="gone"
        android:drawableRight="@android:drawable/btn_radio"
        android:textSize="20sp"
        android:gravity="end|center"
        android:layout_gravity="end"
        android:drawableEnd="@android:drawable/btn_radio" />

    <!--Create Account Button -->
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/create_account"/>

    <ProgressBar
        android:id="@+id/progressBarSignUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true" />



    </LinearLayout>