<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayoutAdCreation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdCreationActivity"
    android:orientation="vertical"
    android:weightSum="12">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1.2">


    <Spinner
        android:id="@+id/animalBreedSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="30dp"
        android:layout_toLeftOf="@id/animalSpinner"
        android:paddingRight="25dp"
        android:background="@drawable/spinner_background"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@id/animalSpinner"
        android:paddingEnd="25dp" />

       <Spinner
           android:id="@+id/animalSpinner"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
           android:layout_alignParentRight="true"
           android:layout_marginStart="30dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="30dp"
           android:layout_marginRight="30dp"
           android:paddingRight="25dp"
           android:background="@drawable/spinner_background"
           android:paddingEnd="25dp" />
   </RelativeLayout>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="0.8">
       <RadioGroup
           android:id="@+id/genderRadioGroup"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_toLeftOf="@+id/sexText"
           android:orientation="horizontal"
           android:checkedButton="@+id/maleRadioButton"
           android:layout_toStartOf="@+id/sexText">

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/female"
            android:textSize="18sp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="center_vertical"
            />

           <RadioButton
               android:id="@+id/maleRadioButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="2dp"
               android:layout_marginEnd="50dp"
               android:layout_marginRight="50dp"
               android:text="@string/male"
               android:textSize="18sp"
               android:layout_gravity="center_vertical"
               />

   </RadioGroup>


       <TextView
           android:id="@+id/sexText"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
           android:layout_alignParentRight="true"
           android:layout_marginEnd="20dp"
           android:layout_marginRight="20dp"
           android:layout_centerVertical="true"
           android:text="@string/gender"
           android:textSize="22sp"
           android:textStyle="bold" />


</RelativeLayout>

    <Spinner
        android:id="@+id/locationSpinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingRight="25dp"
        android:background="@drawable/spinner_background"
        android:paddingEnd="25dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.2">
    <EditText
        android:id="@+id/animalDescriptionEditTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:hint="@string/max_row_number_message"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="7dp"
        android:background="@drawable/editxt_background"
        />

        <ProgressBar
            android:id="@+id/progressBarAdCreate"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.4"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <Button
            android:id="@+id/addPhotoButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_add_a_photo"
            android:padding="2dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photoRecycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/addPhotoButton"
            android:background="@drawable/editxt_background"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@id/addPhotoButton"
            android:layout_marginEnd="5dp">

        </androidx.recyclerview.widget.RecyclerView>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp">
    <Button
        android:id="@+id/createAdButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/place_ad"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        android:layout_centerInParent="true"
        />

</RelativeLayout>



</LinearLayout>